[package]
name = "git-todo-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["derive"] }
git2 = "0.17.2"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.102"
