[package]
name = "git-todo-collector"
version = "0.1.1"
edition = "2021"
authors = ["alingse <alingse@foxmail.com>"]
description = "collect TODO: items from git code repo"
keywords = ["todo", "git-todo", "todo-in-code", "find-todo-in-git-repo"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
bench = false
path = "src/main.rs"
name = "git-todo-collector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.12", features = ["derive"] }
git2 = "0.17.2"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.102"
table_to_html = "0.3.0"
tabled = "0.12.2"
